--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
             "username": "root",
             "password": "0011"
         }
-    ]
+    ],
+    "java.compile.nullAnalysis.mode": "automatic"
 }
